--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -1,7 +1,10 @@
 # From: https://github.com/rkdarst/sphinx-actions-test/blob/master/.github/workflows/sphinx-build.yml
 
 name: sphinx
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
 
 env:
   DEFAULT_BRANCH: "main"
